--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/showdown": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
@@ -18,6 +19,9 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
-    "solid-js": "^1.6.10"
+    "@tanstack/solid-query": "^4.24.4",
+    "showdown": "^2.1.0",
+    "solid-js": "^1.6.10",
+    "zod": "^3.20.2"
   }
 }
